# html5lib-modern

./: .gitmodules  CHANGES.rst  MANIFEST.in  README.rst  debug-info.py  parse.py  pyproject.toml  requirements-oldest.txt  requirements-test.txt  setup.py  tox.ini  toxver.py
.github/workflows/: python-tox.yml
benchmarks/: bench_html.py  bench_wpt.py
doc/: conf.py  movingparts.rst
html5lib/: _inputstream.py  _tokenizer.py  _utils.py  html5parser.py  serializer.py
html5lib/_trie/: _base.py  py.py
html5lib/filters/: lint.py  sanitizer.py
html5lib/tests/: conftest.py  sanitizer.py  support.py  test_alphabeticalattributes.py  test_encoding.py  test_meta.py  test_optionaltags_filter.py  test_parser2.py  test_sanitizer.py  test_serializer.py  test_stream.py  test_tokenizer2.py  test_treeadapters.py  test_treewalkers.py  test_whitespace_filter.py  tokenizer.py  tokenizertotree.py  tree_construction.py
html5lib/treebuilders/: base.py  dom.py  etree.py  etree_lxml.py
html5lib/treewalkers/: etree.py  etree_lxml.py
html5rdf/tests/: conftest.py  sanitizer.py  support.py  test_alphabeticalattributes.py  test_encoding.py  test_optionaltags_filter.py  test_parser2.py  test_serializer.py  test_stream.py  test_tokenizer2.py  test_treeadapters.py  test_treewalkers.py  test_whitespace_filter.py  tokenizer.py  tokenizertotree.py  tree_construction.py
utils/: entities.py
